--- a/mobile/AndroidManifest.xml
+++ b/mobile/AndroidManifest.xml
@@ -2,13 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.cradle.iitc_mobile"
 	android:versionCode="1"
-	android:versionName="1.0" >
+	android:versionName="0.1.5" >
 
 	<uses-sdk
 		android:minSdkVersion="8"
 		android:targetSdkVersion="10" />
 
 	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
 	<application
 		android:allowBackup="true"
