--- a/mobile/AndroidManifest.xml
+++ b/mobile/AndroidManifest.xml
@@ -5,8 +5,8 @@
 	android:versionName="0.2" >
 
 	<uses-sdk
-		android:minSdkVersion="8"
-		android:targetSdkVersion="10" />
+		android:minSdkVersion="11"
+		android:targetSdkVersion="17" />
 
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -18,7 +18,7 @@
 		android:theme="@style/AppTheme" >
 		<activity
 			android:name="com.cradle.iitc_mobile.IITC_Mobile"
-			android:theme="@android:style/Theme.NoTitleBar"
+			android:theme="@style/AppBaseTheme"
 			android:label="@string/app_name"
 			android:configChanges="orientation|keyboard|keyboardHidden|screenSize" >
 			<intent-filter>
