added new app icon (closes #407) thx to Lukas Funk (https://plus.google.com/108901533206068733360/)

--- a/mobile/AndroidManifest.xml
+++ b/mobile/AndroidManifest.xml
@@ -13,7 +13,7 @@
 
 	<application
 		android:allowBackup="true"
-		android:icon="@drawable/ingress_iitc"
+		android:icon="@drawable/iitc_icon"
 		android:label="@string/app_name"
 		android:theme="@style/AppTheme" >
 		<activity
