--- a/mobile/AndroidManifest.xml
+++ b/mobile/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.cradle.iitc_mobile"
 	android:versionCode="1"
-	android:versionName="0.2.3" >
+	android:versionName="0.2.4" >
 
 	<uses-sdk
 		android:minSdkVersion="14"
@@ -32,6 +32,12 @@
 				<data android:host="www.ingress.com" android:scheme="https" android:pathPrefix="/intel"></data>
 				<data android:host="www.ingress.com" android:scheme="http" android:pathPrefix="/intel"></data>
 			</intent-filter>
+		</activity>
+		<activity
+			android:name="com.cradle.iitc_mobile.IITC_Settings"
+			android:theme="@style/AppBaseTheme"
+			android:label="@string/app_name"
+			android:configChanges="orientation|keyboard|keyboardHidden|screenSize" >
 		</activity>
 	</application>
 
