made force-https an option in mobile settings. removed plugin from build

--- a/mobile/.gitignore
+++ b/mobile/.gitignore
@@ -6,6 +6,6 @@ gen/
 libs/
 proguard-project.txt
 local.properties
-assets/iitc.js
+assets/total-conversion-build.user.js
 assets/user-location.user.js
 assets/plugins/
