--- a/mobile/AndroidManifest.xml
+++ b/mobile/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_iitcm"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" android:uiOptions="splitActionBarWhenNarrow">
+        android:theme="@style/AppTheme"
+        android:uiOptions="splitActionBarWhenNarrow">
         <activity
             android:name="com.cradle.iitc_mobile.IITC_Mobile"
             android:theme="@style/AppBaseTheme"
