--- a/mobile/.gitignore
+++ b/mobile/.gitignore
@@ -3,6 +3,10 @@ assets/total-conversion-build.user.js
 assets/user-location.user.js
 assets/plugins/
 
+# built application files
+*.apk
+*.ap_
+
 # files for the dex VM
 *.dex
 
