--- a/mobile/AndroidManifest.xml
+++ b/mobile/AndroidManifest.xml
@@ -24,13 +24,23 @@
             android:name="com.cradle.iitc_mobile.IITC_Mobile"
             android:theme="@style/AppBaseTheme"
             android:label="@string/app_name"
+            android:launchMode="singleTop"
             android:configChanges="orientation|keyboard|keyboardHidden|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
+                <!-- Used for Samsung Multi-Window support -->
                 <category android:name="android.intent.category.MULTIWINDOW_LAUNCHER"/>
             </intent-filter>
+
+            <!-- Receives the search request. -->
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH"/>
+                <!-- No category needed, because the Intent will specify this class component-->
+            </intent-filter>
+
+            <!-- Handles the implicit intent to VIEW the www.ingress.com/intel URI -->
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
 
@@ -46,6 +56,10 @@
                     android:scheme="http"
                     android:pathPrefix="/intel"></data>
             </intent-filter>
+
+            <!-- Points to searchable meta data. -->
+            <meta-data android:name="android.app.searchable"
+                       android:resource="@xml/searchable" />
         </activity>
         <activity
             android:name="com.cradle.iitc_mobile.IITC_Settings"
@@ -54,6 +68,7 @@
             android:configChanges="orientation|keyboard|keyboardHidden|screenSize">
         </activity>
 
+        <!-- START Used for Samsung Multi-Window support -->
         <uses-library
             android:name="com.sec.android.app.multiwindow"
             android:required="false"/>
@@ -74,7 +89,12 @@
         <meta-data
             android:name="com.sec.android.multiwindow.MINIMUM_SIZE_H"
             android:resource="@dimen/app_minimumsize_h"/>
+        <!-- END Used for Samsung Multi-Window support -->
 
+        <!-- Points to searchable activity so the whole app can invoke search. -->
+        <meta-data
+            android:name="android.app.default_searchable"
+            android:value="com.cradle.iitc_mobile.IITC_Mobile"/>
     </application>
 
 </manifest>
