--- a/mobile/AndroidManifest.xml
+++ b/mobile/AndroidManifest.xml
@@ -50,12 +50,23 @@
                 <data
                     android:host="www.ingress.com"
                     android:scheme="https"
-                    android:pathPrefix="/intel"></data>
+                    android:pathPrefix="/intel"/>
                 <data
                     android:host="www.ingress.com"
                     android:scheme="http"
-                    android:pathPrefix="/intel"></data>
+                    android:pathPrefix="/intel"/>
             </intent-filter>
+
+            <!-- Handles geo: URIs -->
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+
+                <data android:scheme="geo"/>
+            </intent-filter>
+            
 
             <!-- Points to searchable meta data. -->
             <meta-data android:name="android.app.searchable"
@@ -65,8 +76,7 @@
             android:name="com.cradle.iitc_mobile.IITC_Settings"
             android:theme="@style/AppBaseTheme"
             android:label="@string/app_name"
-            android:configChanges="orientation|keyboard|keyboardHidden|screenSize">
-        </activity>
+            android:configChanges="orientation|keyboard|keyboardHidden|screenSize"/>
 
         <!-- START Used for Samsung Multi-Window support -->
         <uses-library
