--- a/mobile/AndroidManifest.xml
+++ b/mobile/AndroidManifest.xml
@@ -72,11 +72,37 @@
             <meta-data android:name="android.app.searchable"
                        android:resource="@xml/searchable" />
         </activity>
+
         <activity
             android:name="com.cradle.iitc_mobile.IITC_Settings"
             android:theme="@style/AppBaseTheme"
             android:label="@string/app_name"
             android:configChanges="orientation|keyboard|keyboardHidden|screenSize"/>
+
+        <activity
+            android:name=".share.ShareActivity"
+            android:label="@string/app_name"
+            android:noHistory="true"
+            android:parentActivityName="com.cradle.iitc_mobile.IITC_Mobile"
+            android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.cradle.iitc_mobile.IITC_Mobile"/>
+        </activity>
+
+        <activity
+            android:name=".share.SendToClipboard"
+            android:enabled="true"
+            android:excludeFromRecents="true"
+            android:exported="false"
+            android:label="Copy to clipboard"
+            android:noHistory="false">
+            <intent-filter>
+                <action android:name="android.intent.action.SEND"/>
+
+                <data android:mimeType="text/plain"/>
+            </intent-filter>
+        </activity>
 
         <!-- START Used for Samsung Multi-Window support -->
         <uses-library
@@ -86,7 +112,6 @@
         <meta-data
             android:name="com.sec.android.support.multiwindow"
             android:value="true"/>
-
         <meta-data
             android:name="com.sec.android.multiwindow.DEFAULT_SIZE_W"
             android:resource="@dimen/app_defaultsize_w"/>
