--- a/mobile/AndroidManifest.xml
+++ b/mobile/AndroidManifest.xml
@@ -94,6 +94,7 @@
             android:enabled="true"
             android:excludeFromRecents="true"
             android:exported="false"
+            android:icon="@drawable/copy"
             android:label="Copy to clipboard"
             android:noHistory="false">
             <intent-filter>
