--- a/mobile/AndroidManifest.xml
+++ b/mobile/AndroidManifest.xml
@@ -73,7 +73,12 @@
         </activity>
 
         <activity
-            android:name="com.cradle.iitc_mobile.IITC_Settings"
+            android:name=".IITC_PreferenceActivity"
+            android:theme="@style/AppBaseTheme"
+            android:label="@string/app_name"
+            android:configChanges="orientation|keyboard|keyboardHidden|screenSize"/>
+        <activity
+            android:name="com.cradle.iitc_mobile.IITC_PluginPreferenceActivity"
             android:theme="@style/AppBaseTheme"
             android:label="@string/app_name"
             android:configChanges="orientation|keyboard|keyboardHidden|screenSize"/>
