--- a/mobile/AndroidManifest.xml
+++ b/mobile/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.cradle.iitc_mobile"
-          android:versionCode="44"
-          android:versionName="0.6">
+          android:versionCode="45"
+          android:versionName="0.6.1">
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -78,7 +78,7 @@
             android:label="@string/app_name"
             android:configChanges="orientation|keyboard|keyboardHidden|screenSize"/>
         <activity
-            android:name="com.cradle.iitc_mobile.IITC_PluginPreferenceActivity"
+            android:name=".IITC_PluginPreferenceActivity"
             android:theme="@style/AppBaseTheme"
             android:label="@string/app_name"
             android:configChanges="orientation|keyboard|keyboardHidden|screenSize"/>
