--- a/mobile/AndroidManifest.xml
+++ b/mobile/AndroidManifest.xml
@@ -18,8 +18,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_iitcm"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:uiOptions="splitActionBarWhenNarrow">
+        android:theme="@style/AppTheme">
         <activity
             android:name="com.cradle.iitc_mobile.IITC_Mobile"
             android:configChanges="orientation|keyboard|keyboardHidden|screenSize"
