--- a/mobile/AndroidManifest.xml
+++ b/mobile/AndroidManifest.xml
@@ -23,7 +23,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.cradle.iitc_mobile.IITC_Mobile"
+            android:name=".IITC_Mobile"
             android:configChanges="orientation|keyboard|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:launchMode="singleTop"
@@ -89,18 +89,18 @@
             android:name=".share.ShareActivity"
             android:label="@string/activity_share"
             android:noHistory="true"
-            android:parentActivityName="com.cradle.iitc_mobile.IITC_Mobile"
+            android:parentActivityName=".IITC_Mobile"
             android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.cradle.iitc_mobile.IITC_Mobile"/>
+                android:value=".IITC_Mobile"/>
         </activity>
 
         <activity
             android:name=".share.SendToClipboard"
             android:enabled="true"
             android:excludeFromRecents="true"
-            android:exported="false"
+            android:exported="true"
             android:icon="@drawable/copy"
             android:label="@string/activity_share_to_clipboard"
             android:noHistory="false">
