--- a/mobile/AndroidManifest.xml
+++ b/mobile/AndroidManifest.xml
@@ -26,7 +26,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".IITC_Mobile"
-            android:configChanges="orientation|keyboard|keyboardHidden|screenSize"
+            android:configChanges="orientation|keyboard|keyboardHidden|screenSize|uiMode"
             android:label="@string/app_name"
             android:launchMode="singleTop">
             <intent-filter>
