--- a/mobile/AndroidManifest.xml
+++ b/mobile/AndroidManifest.xml
@@ -16,6 +16,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
     -->
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.NFC"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
