don't trigger on all text mimeTypes - this breaks compatibility with file explorers throwing a wrong intent (like ES explorer)...but this is not a problem IITCm has to workaround.

--- a/mobile/AndroidManifest.xml
+++ b/mobile/AndroidManifest.xml
@@ -81,7 +81,7 @@
                 <category android:name="android.intent.category.BROWSABLE"/>
 
                 <data android:mimeType="application/x-javascript" />
-                <data android:mimeType="text/*" />
+                <data android:mimeType="text/javascript" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
