--- a/mobile/iitcm/build.gradle
+++ b/mobile/iitcm/build.gradle
@@ -1,5 +1,33 @@
 apply plugin: 'android'
 
+def getVersionCode = { ->
+    try {
+        def stdout = new ByteArrayOutputStream()
+        exec {
+            commandLine 'git', 'rev-list', 'HEAD', '--count'
+            standardOutput = stdout
+        }
+        return stdout.toInt()
+    }
+    catch (ignored) {
+        return -1;
+    }
+}
+
+def getVersionName = { ->
+    try {
+        def stdout = new ByteArrayOutputStream()
+        exec {
+            commandLine 'git', 'describe', '--tags', '--dirty'
+            standardOutput = stdout
+        }
+        return stdout.toString().trim()
+    }
+    catch (ignored) {
+        return null;
+    }
+}
+
 android {
     compileSdkVersion 19
     buildToolsVersion "19.0.1"
@@ -8,10 +36,19 @@ android {
         minSdkVersion 14
         targetSdkVersion 19
     }
+
     buildTypes {
         release {
             runProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+        }
+    }
+
+    productFlavors {
+        testing {
+            packageName "com.cradle.iitc_mobile.test"
+            versionCode getVersionCode()
+            versionName getVersionName()
         }
     }
 }
