--- a/mobile/iitcm/build.gradle
+++ b/mobile/iitcm/build.gradle
@@ -1,31 +1,35 @@
 apply plugin: 'android'
+import com.android.builder.DefaultManifestParser
 
 def getVersionCode = { ->
-    try {
-        def stdout = new ByteArrayOutputStream()
-        exec {
-            commandLine 'git', 'rev-list', 'HEAD', '--count'
-            standardOutput = stdout
-        }
-        return Integer.parseInt(stdout.toString().trim());
+    def git = 'git rev-list HEAD --count'
+
+    def proc = git.execute()
+    proc.waitFor()
+    def desc = "${proc.in.text}".trim()
+
+    if (desc.isEmpty()) {
+        println "ERROR setting version code"
+        return -1
     }
-    catch (ignored) {
-        return -1;
-    }
+    return Integer.parseInt(desc)
 }
 
 def getVersionName = { ->
-    try {
-        def stdout = new ByteArrayOutputStream()
-        exec {
-            commandLine 'git', 'describe', '--tags', '--dirty'
-            standardOutput = stdout
-        }
-        return stdout.toString().trim()
+    def git = 'git rev-parse --short HEAD'
+
+    def proc = git.execute()
+    proc.waitFor()
+    def desc = "${proc.in.text}".trim()
+
+    if (desc.isEmpty()) {
+        println "ERROR setting version name"
+        return "0"
     }
-    catch (ignored) {
-        return null;
-    }
+    def manifestParser = new DefaultManifestParser()
+    String versionName = manifestParser.getVersionName(android.sourceSets.main.manifest.srcFile)
+    String testVersionName = versionName + "." + desc
+    return testVersionName
 }
 
 android {
