--- a/mobile/iitcm/build.gradle
+++ b/mobile/iitcm/build.gradle
@@ -98,6 +98,6 @@ android.applicationVariants.all{ variant ->
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:21.0.0'
+    compile 'com.android.support:appcompat-v7:21.+'
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
