new themed actionbar

--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     repositories {
         mavenCentral()
+        mavenLocal()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:0.12.2+'
@@ -12,5 +13,6 @@ buildscript {
 allprojects {
     repositories {
         mavenCentral()
+        mavenLocal()
     }
 }
