--- a/mobile/iitcm/src/main/AndroidManifest.xml
+++ b/mobile/iitcm/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_iitcm"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppBaseTheme">
         <activity
             android:name="com.cradle.iitc_mobile.IITC_Mobile"
             android:configChanges="orientation|keyboard|keyboardHidden|screenSize|uiMode"
@@ -116,7 +116,7 @@
 
         <activity
             android:name="com.cradle.iitc_mobile.prefs.PreferenceActivity"
-            android:theme="@style/AppTheme"
+            android:theme="@style/AppPrefTheme"
             android:configChanges="orientation|keyboard|keyboardHidden|screenSize"
             android:label="@string/activity_settings"/>
         <activity
