--- a/mobile/iitcm/src/main/AndroidManifest.xml
+++ b/mobile/iitcm/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:name="com.cradle.iitc_mobile.IITC_Mobile"
             android:configChanges="orientation|keyboard|keyboardHidden|screenSize|uiMode"
             android:label="@string/app_name"
-            android:launchMode="singleTop">
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -72,6 +72,24 @@
                 <data android:scheme="geo"/>
             </intent-filter>
 
+            <!-- Points to searchable meta data. -->
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable"/>
+        </activity>
+
+        <activity
+            android:name="com.cradle.iitc_mobile.prefs.PreferenceActivity"
+            android:theme="@style/AppPrefTheme"
+            android:configChanges="orientation|keyboard|keyboardHidden|screenSize"
+            android:label="@string/activity_settings"/>
+
+        <activity
+            android:name="com.cradle.iitc_mobile.prefs.PluginPreferenceActivity"
+            android:theme="@style/AppPrefTheme"
+            android:launchMode="singleTop"
+            android:configChanges="orientation|keyboard|keyboardHidden|screenSize"
+            android:label="@string/activity_plugins">
             <!-- Handles external user plugins -->
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
@@ -107,23 +125,8 @@
                     android:pathPattern=".*\\.user.js"
                     android:scheme="https"/>
             </intent-filter>
-
-            <!-- Points to searchable meta data. -->
-            <meta-data
-                android:name="android.app.searchable"
-                android:resource="@xml/searchable"/>
         </activity>
 
-        <activity
-            android:name="com.cradle.iitc_mobile.prefs.PreferenceActivity"
-            android:theme="@style/AppPrefTheme"
-            android:configChanges="orientation|keyboard|keyboardHidden|screenSize"
-            android:label="@string/activity_settings"/>
-        <activity
-            android:name="com.cradle.iitc_mobile.prefs.PluginPreferenceActivity"
-            android:theme="@style/AppPrefTheme"
-            android:configChanges="orientation|keyboard|keyboardHidden|screenSize"
-            android:label="@string/activity_plugins"/>
         <activity
             android:name="com.cradle.iitc_mobile.share.ShareActivity"
             android:theme="@style/AppPrefTheme"
@@ -149,6 +152,7 @@
                 <data android:mimeType="text/plain"/>
             </intent-filter>
         </activity>
+
         <activity
             android:name="com.cradle.iitc_mobile.share.SaveToFile"
             android:enabled="true"
