--- a/mobile/AndroidManifest.xml
+++ b/mobile/AndroidManifest.xml
@@ -60,6 +60,14 @@
                     android:host="www.ingress.com"
                     android:pathPrefix="/intel"
                     android:scheme="http"/>
+                <data
+                    android:host="www.ingress.com"
+                    android:pathPrefix="/mission/"
+                    android:scheme="https"/>
+                <data
+                    android:host="www.ingress.com"
+                    android:pathPrefix="/mission/"
+                    android:scheme="http"/>
             </intent-filter>
 
             <!-- Handles geo: URIs -->
